# WnLRenderer

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
include/wnlrenderer/: renderer.h
src/: CMakeLists.txt  frag.h  main.cpp  vert.h  window.h
